KIP-714 support for client

--- a/build.gradle
+++ b/build.gradle
@@ -1221,6 +1221,7 @@ project(':clients') {
   dependencies {
     implementation libs.zstd
     implementation libs.lz4
+    implementation libs.opentelemetryProto
     implementation libs.snappy
     implementation libs.slf4jApi
 
