--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -103,6 +103,7 @@ versions += [
   metrics: "2.2.0",
   mockito: "3.12.4",
   netty: "4.1.68.Final",
+  opentelemetryProto: "0.11.0-alpha",
   powermock: "2.0.9",
   reflections: "0.9.12",
   rocksDB: "6.22.1.1",
@@ -183,6 +184,7 @@ libs += [
   mockitoJunitJupiter: "org.mockito:mockito-junit-jupiter:$versions.mockito",
   nettyHandler: "io.netty:netty-handler:$versions.netty",
   nettyTransportNativeEpoll: "io.netty:netty-transport-native-epoll:$versions.netty",
+  opentelemetryProto: "io.opentelemetry.proto:opentelemetry-proto:$versions.opentelemetryProto",
   powermockJunit4: "org.powermock:powermock-module-junit4:$versions.powermock",
   powermockEasymock: "org.powermock:powermock-api-easymock:$versions.powermock",
   reflections: "org.reflections:reflections:$versions.reflections",
