--- a/build.gradle
+++ b/build.gradle
@@ -280,10 +280,8 @@ subprojects {
         // To test locally, invoke gradlew with `-PmavenUrl=file:///some/local/path`
         maven {
           url = mavenUrl
-          credentials {
-            username = mavenUsername
-            password = mavenPassword
-          }
+          authentication {
+            awsIm(AwsImAuthentication) // Loads the AWS_* ENV Vars
         }
       }
       publications {
