revert aws auth patch

--- a/build.gradle
+++ b/build.gradle
@@ -280,8 +280,9 @@ subprojects {
         // To test locally, invoke gradlew with `-PmavenUrl=file:///some/local/path`
         maven {
           url = mavenUrl
-          authentication {
-            awsIm(AwsImAuthentication) // Loads the AWS_* ENV Vars
+          credentials {
+            username = mavenUsername
+            password = mavenPassword
           }
         }
       }
