--- a/config/tools-log4j.properties
+++ b/config/tools-log4j.properties
@@ -20,5 +20,5 @@ log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=[%d] %p %m (%c)%n
 log4j.appender.stderr.Target=System.err
 
-log4j.logger.org.apache.kafka.clients.NetworkClient=DEBUG
-log4j.logger.org.apache.kafka.clients.TelemetryManagementInterface=TRACE
+#log4j.logger.org.apache.kafka.clients.NetworkClient=DEBUG
+log4j.logger.org.apache.kafka.clients.telemetry=TRACE
