--- a/core/src/test/resources/log4j.properties
+++ b/core/src/test/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c:%L)%n
 
 log4j.logger.kafka=WARN
-log4j.logger.org.apache.kafka.clients=INFO
+log4j.logger.org.apache.kafka=WARN
 
 
 # zkclient can be verbose, during debugging it is common to adjust it separately
