--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -75,7 +75,6 @@ versions += [
   jline: "3.12.1",
   jmh: "1.32",
   hamcrest: "2.2",
-  log4j: "1.2.17-cp8",
   scalaLogging: "3.9.3",
   jaxb: "2.3.0",
   jaxrs: "2.1.1",
@@ -107,12 +106,13 @@ versions += [
   netty: "4.1.79.Final",
   powermock: "2.0.9",
   reflections: "0.9.12",
+  reload4j: "1.2.19",
   rocksDB: "6.22.1.1",
   scalaCollectionCompat: "2.4.4",
   scalafmt: "2.7.5",
   scalaJava8Compat : "1.0.0",
   scoverage: "1.4.1",
-  slf4j: "1.7.30",
+  slf4j: "1.7.36",
   snappy: "1.1.8.4",
   spotbugs: "4.2.2",
   zinc: "1.3.5",
@@ -177,7 +177,7 @@ libs += [
   kafkaStreams_27: "org.apache.kafka:kafka-streams:$versions.kafka_27",
   kafkaStreams_28: "org.apache.kafka:kafka-streams:$versions.kafka_28",
   kafkaStreams_30: "org.apache.kafka:kafka-streams:$versions.kafka_30",
-  log4j: "io.confluent:confluent-log4j:$versions.log4j",
+  log4j: "ch.qos.reload4j:reload4j:$versions.reload4j",
   lz4: "org.lz4:lz4-java:$versions.lz4",
   metrics: "com.yammer.metrics:metrics-core:$versions.metrics",
   dropwizardMetrics: "io.dropwizard.metrics:metrics-core:$versions.dropwizardMetrics",
@@ -196,7 +196,7 @@ libs += [
   scalaLogging: "com.typesafe.scala-logging:scala-logging_$versions.baseScala:$versions.scalaLogging",
   scalaReflect: "org.scala-lang:scala-reflect:$versions.scala",
   slf4jApi: "org.slf4j:slf4j-api:$versions.slf4j",
-  slf4jlog4j: "org.slf4j:slf4j-log4j12:$versions.slf4j",
+  slf4jreload4j: "org.slf4j:slf4j-reload4j:$versions.slf4j",
   snappy: "org.xerial.snappy:snappy-java:$versions.snappy",
   zookeeper: "org.apache.zookeeper:zookeeper:$versions.zookeeper",
   jfreechart: "jfreechart:jfreechart:$versions.jfreechart",
