--- a/build.gradle
+++ b/build.gradle
@@ -812,7 +812,7 @@ project(':core') {
     testCompile libs.junitJupiterApi
     testCompile libs.junitVintageEngine
     testCompile libs.scalatest
-    testCompile libs.slf4jlog4j
+    testCompile libs.slf4jreload4j
     testCompile libs.jfreechart
   }
 
@@ -840,8 +840,8 @@ project(':core') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1071,7 +1071,7 @@ project(':clients') {
     testCompile libs.junitVintageEngine
     testCompile libs.mockitoCore
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testRuntime libs.jacksonDatabind
     testRuntime libs.jacksonJDK8Datatypes
     testCompile libs.jacksonJaxrsJsonProvider
@@ -1185,7 +1185,7 @@ project(':raft') {
     testCompile libs.junitJupiter
     testCompile libs.mockitoCore
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   task createVersionFile(dependsOn: determineCommitId) {
@@ -1271,7 +1271,7 @@ project(':tools') {
     testCompile project(':clients').sourceSets.test.output
     testCompile libs.mockitoInline // supports mocking static methods, final classes, etc.
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1280,8 +1280,8 @@ project(':tools') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1326,7 +1326,7 @@ project(':streams') {
     testCompile libs.hamcrest
 
     testRuntimeOnly project(':streams:test-utils')
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   task processMessages(type:JavaExec) {
@@ -1363,8 +1363,8 @@ project(':streams') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
       include('*hamcrest*')
     }
     from (configurations.runtime) {
@@ -1454,7 +1454,7 @@ project(':streams:streams-scala') {
     testCompile libs.easymock
     testCompile libs.hamcrest
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1493,7 +1493,7 @@ project(':streams:test-utils') {
     testCompile libs.easymock
     testCompile libs.hamcrest
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1521,7 +1521,7 @@ project(':streams:examples') {
   dependencies {
     compile project(':streams')
     compile project(':connect:json')  // this dependency should be removed after we unify data API
-    compile libs.slf4jlog4j
+    compile libs.slf4jreload4j
 
     testCompile project(':streams:test-utils')
     testCompile project(':clients').sourceSets.test.output // for org.apache.kafka.test.IntegrationTest
@@ -1550,7 +1550,10 @@ project(':streams:upgrade-system-tests-0100') {
   archivesBaseName = "kafka-streams-upgrade-system-tests-0100"
 
   dependencies {
-    testCompile libs.kafkaStreams_0100
+    testCompile(libs.kafkaStreams_0100) {
+      exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+      exclude group: 'log4j', module: 'log4j'
+    }
   }
 
   systemTestLibs {
@@ -1562,7 +1565,10 @@ project(':streams:upgrade-system-tests-0101') {
   archivesBaseName = "kafka-streams-upgrade-system-tests-0101"
 
   dependencies {
-    testCompile libs.kafkaStreams_0101
+    testCompile(libs.kafkaStreams_0101) {
+      exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+      exclude group: 'log4j', module: 'log4j'
+    }
   }
 
   systemTestLibs {
@@ -1723,7 +1729,7 @@ project(':jmh-benchmarks') {
     annotationProcessor libs.jmhGeneratorAnnProcess
     compile libs.jmhCoreBenchmarks
     compile libs.mockitoCore
-    compile libs.slf4jlog4j
+    compile libs.slf4jreload4j
   }
 
   jar {
@@ -1758,7 +1764,7 @@ project(':log4j-appender') {
 
   dependencies {
     compile project(':clients')
-    compile libs.slf4jlog4j
+    compile libs.slf4jreload4j
 
     testCompile project(':clients').sourceSets.test.output
     testCompile libs.junitJupiterApi
@@ -1783,7 +1789,7 @@ project(':connect:api') {
     testCompile libs.junitJupiterApi
     testCompile libs.junitVintageEngine
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testCompile project(':clients').sourceSets.test.output
   }
 
@@ -1798,8 +1804,8 @@ project(':connect:api') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1827,7 +1833,7 @@ project(':connect:transforms') {
     testCompile libs.powermockJunit4
     testCompile libs.powermockEasymock
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testCompile project(':clients').sourceSets.test.output
   }
 
@@ -1837,8 +1843,8 @@ project(':connect:transforms') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1868,7 +1874,7 @@ project(':connect:json') {
     testCompile libs.powermockJunit4
     testCompile libs.powermockEasymock
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testCompile project(':clients').sourceSets.test.output
   }
 
@@ -1878,8 +1884,8 @@ project(':connect:json') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -1931,7 +1937,7 @@ project(':connect:runtime') {
     testCompile project(':core')
     testCompile project(':core').sourceSets.test.output
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -1940,8 +1946,8 @@ project(':connect:runtime') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -2012,7 +2018,7 @@ project(':connect:file') {
     testCompile libs.powermockJunit4
     testCompile libs.powermockEasymock
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testCompile project(':clients').sourceSets.test.output
   }
 
@@ -2022,8 +2028,8 @@ project(':connect:file') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -2053,7 +2059,7 @@ project(':connect:basic-auth-extension') {
     testCompile libs.powermockEasymock
     testCompile project(':clients').sourceSets.test.output
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
     testRuntime libs.jerseyContainerServlet
   }
 
@@ -2063,8 +2069,8 @@ project(':connect:basic-auth-extension') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -2099,7 +2105,7 @@ project(':connect:mirror') {
     testCompile project(':core').sourceSets.test.output
 
     testRuntime project(':connect:runtime')
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -2108,8 +2114,8 @@ project(':connect:mirror') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
@@ -2135,7 +2141,7 @@ project(':connect:mirror-client') {
     testCompile libs.junitVintageEngine
     testCompile project(':clients').sourceSets.test.output
 
-    testRuntime libs.slf4jlog4j
+    testRuntime libs.slf4jreload4j
   }
 
   javadoc {
@@ -2144,8 +2150,8 @@ project(':connect:mirror-client') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntime) {
-      include('slf4j-log4j12*')
-      include('log4j*jar')
+      include('slf4j-reload4j*jar')
+      include('reload4j*jar')
     }
     from (configurations.runtime) {
       exclude('kafka-clients*')
