--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -74,7 +74,7 @@ versions += [
   jersey: "2.34",
   jmh: "1.23",
   hamcrest: "2.2",
-  log4j: "1.2.17-cp2.2",
+  reload4j: "1.2.19",
   scalaLogging: "3.9.2",
   jaxb: "2.3.0",
   jaxrs: "2.1.1",
@@ -111,7 +111,7 @@ versions += [
   scoverage: "1.4.1",
   scoveragePlugin: "4.0.2",
   shadowPlugin: "6.0.0",
-  slf4j: "1.7.30",
+  slf4j: "1.7.36",
   snappy: "1.1.7.7",
   spotbugs: "4.0.6",
   spotbugsPlugin: "4.4.4",
@@ -173,7 +173,7 @@ libs += [
   kafkaStreams_25: "org.apache.kafka:kafka-streams:$versions.kafka_25",
   kafkaStreams_26: "org.apache.kafka:kafka-streams:$versions.kafka_26",
   kafkaStreams_27: "org.apache.kafka:kafka-streams:$versions.kafka_27",
-  log4j: "io.confluent:confluent-log4j:$versions.log4j",
+  log4j: "ch.qos.reload4j:reload4j:$versions.reload4j",
   lz4: "org.lz4:lz4-java:$versions.lz4",
   metrics: "com.yammer.metrics:metrics-core:$versions.metrics",
   mockitoCore: "org.mockito:mockito-core:$versions.mockito",
@@ -191,7 +191,7 @@ libs += [
   scalaReflect: "org.scala-lang:scala-reflect:$versions.scala",
   scalatest: "org.scalatest:scalatest_$versions.baseScala:$versions.scalatest",
   slf4jApi: "org.slf4j:slf4j-api:$versions.slf4j",
-  slf4jlog4j: "org.slf4j:slf4j-log4j12:$versions.slf4j",
+  slf4jreload4j: "org.slf4j:slf4j-reload4j:$versions.slf4j",
   snappy: "org.xerial.snappy:snappy-java:$versions.snappy",
   zookeeper: "org.apache.zookeeper:zookeeper:$versions.zookeeper",
   jfreechart: "jfreechart:jfreechart:$versions.jfreechart",
