KSECURITY-478: migrating log4j12 to reload4j, slf4j-log4j12 to slf4j-reload4j.jar (3.3) #775
Jira: https://confluentinc.atlassian.net/browse/KSECURITY-483
Migrating log4j12 to reload4j
Migrating slf4j-log4j12 to slf4j-reload4j.jar

--- a/build.gradle
+++ b/build.gradle
@@ -923,7 +923,7 @@ project(':core') {
     testImplementation libs.apachedsMavibotPartition
     testImplementation libs.apachedsJdbmPartition
     testImplementation libs.junitJupiter
-    testImplementation libs.slf4jlog4j
+    testImplementation libs.slf4jreload4j
     testImplementation(libs.jfreechart) {
       exclude group: 'junit', module: 'junit'
     }
@@ -955,7 +955,7 @@ project(':core') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -1185,7 +1185,7 @@ project(':metadata') {
     testImplementation libs.hamcrest
     testImplementation libs.mockitoCore
     testImplementation libs.mockitoInline
-    testImplementation libs.slf4jlog4j
+    testImplementation libs.slf4jreload4j
     testImplementation project(':clients').sourceSets.test.output
     testImplementation project(':raft').sourceSets.test.output
     generator project(':generator')
@@ -1279,7 +1279,7 @@ project(':clients') {
     testImplementation libs.junitJupiter
     testImplementation libs.mockitoInline
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
     testRuntimeOnly libs.jacksonDatabind
     testRuntimeOnly libs.jacksonJDK8Datatypes
     testImplementation libs.jose4j
@@ -1413,7 +1413,7 @@ project(':raft') {
     testImplementation libs.mockitoCore
     testImplementation libs.jqwik
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
 
     generator project(':generator')
   }
@@ -1500,7 +1500,7 @@ project(':server-common') {
     testImplementation libs.junitJupiter
     testImplementation libs.mockitoCore
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   task createVersionFile() {
@@ -1558,7 +1558,7 @@ project(':storage:api') {
     testImplementation libs.junitJupiter
     testImplementation libs.mockitoCore
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   task createVersionFile() {
@@ -1630,7 +1630,7 @@ project(':storage') {
     testImplementation libs.mockitoCore
     testImplementation libs.bcpkix
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
 
     generator project(':generator')
   }
@@ -1725,7 +1725,7 @@ project(':tools') {
     testImplementation project(':clients').sourceSets.test.output
     testImplementation libs.mockitoInline // supports mocking static methods, final classes, etc.
     testImplementation libs.mockitoJunitJupiter // supports MockitoExtension
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   javadoc {
@@ -1734,7 +1734,7 @@ project(':tools') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -1775,7 +1775,7 @@ project(':trogdor') {
     testImplementation project(':clients').sourceSets.test.output
     testImplementation libs.mockitoInline // supports mocking static methods, final classes, etc.
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   javadoc {
@@ -1784,7 +1784,7 @@ project(':trogdor') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -1821,7 +1821,7 @@ project(':shell') {
     testImplementation project(':clients')
     testImplementation libs.junitJupiter
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   javadoc {
@@ -1877,7 +1877,7 @@ project(':streams') {
     testImplementation libs.mockitoInline // supports mocking static methods, final classes, etc.
 
     testRuntimeOnly project(':streams:test-utils')
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
 
     generator project(':generator')
   }
@@ -2008,7 +2008,7 @@ project(':streams:streams-scala') {
     testImplementation libs.junitJupiter
     testImplementation libs.easymock
     testImplementation libs.hamcrest
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   javadoc {
@@ -2044,7 +2044,7 @@ project(':streams:test-utils') {
     testImplementation libs.mockitoCore
     testImplementation libs.hamcrest
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   javadoc {
@@ -2077,7 +2077,7 @@ project(':streams:examples') {
 
     implementation project(':streams')
 
-    implementation libs.slf4jlog4j
+    implementation libs.slf4jreload4j
 
     testImplementation project(':streams:test-utils')
     testImplementation project(':clients').sourceSets.test.output // for org.apache.kafka.test.IntegrationTest
@@ -2369,7 +2369,7 @@ project(':jmh-benchmarks') {
     implementation libs.jacksonDatabind
     implementation libs.metrics
     implementation libs.mockitoCore
-    implementation libs.slf4jlog4j
+    implementation libs.slf4jreload4j
     implementation libs.scalaLibrary
     implementation libs.scalaJava8Compat
   }
@@ -2411,7 +2411,7 @@ project(':log4j-appender') {
 
   dependencies {
     implementation project(':clients')
-    implementation libs.slf4jlog4j
+    implementation libs.slf4jreload4j
 
     testImplementation project(':clients').sourceSets.test.output
     testImplementation libs.junitJupiter
@@ -2434,7 +2434,7 @@ project(':connect:api') {
     implementation libs.jaxrsApi
 
     testImplementation libs.junitJupiter
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
     testImplementation project(':clients').sourceSets.test.output
   }
 
@@ -2444,7 +2444,7 @@ project(':connect:api') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -2471,7 +2471,7 @@ project(':connect:transforms') {
     testImplementation libs.easymock
     testImplementation libs.junitJupiter
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
     testImplementation project(':clients').sourceSets.test.output
   }
 
@@ -2481,7 +2481,7 @@ project(':connect:transforms') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -2511,7 +2511,7 @@ project(':connect:json') {
     testImplementation libs.easymock
     testImplementation libs.junitJupiter
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
     testImplementation project(':clients').sourceSets.test.output
   }
 
@@ -2521,7 +2521,7 @@ project(':connect:json') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -2581,7 +2581,7 @@ project(':connect:runtime') {
     testImplementation libs.mockitoInline
     testImplementation libs.httpclient
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   javadoc {
@@ -2591,7 +2591,7 @@ project(':connect:runtime') {
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
       // No need to copy log4j since the module has an explicit dependency on that
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
       exclude('kafka-clients*')
@@ -2679,7 +2679,7 @@ project(':connect:file') {
     testImplementation libs.junitJupiter
     testImplementation libs.mockitoCore
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
     testImplementation project(':clients').sourceSets.test.output
   }
 
@@ -2689,7 +2689,7 @@ project(':connect:file') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -2718,7 +2718,7 @@ project(':connect:basic-auth-extension') {
     testImplementation libs.junitJupiter
     testImplementation project(':clients').sourceSets.test.output
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
     testRuntimeOnly libs.jerseyContainerServlet
   }
 
@@ -2728,7 +2728,7 @@ project(':connect:basic-auth-extension') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -2765,7 +2765,7 @@ project(':connect:mirror') {
     testImplementation project(':core').sourceSets.test.output
 
     testRuntimeOnly project(':connect:runtime')
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
     testRuntimeOnly libs.bcpkix
   }
 
@@ -2775,7 +2775,7 @@ project(':connect:mirror') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
@@ -2801,7 +2801,7 @@ project(':connect:mirror-client') {
     testImplementation libs.junitJupiter
     testImplementation project(':clients').sourceSets.test.output
 
-    testRuntimeOnly libs.slf4jlog4j
+    testRuntimeOnly libs.slf4jreload4j
   }
 
   javadoc {
@@ -2810,7 +2810,7 @@ project(':connect:mirror-client') {
 
   tasks.create(name: "copyDependantLibs", type: Copy) {
     from (configurations.testRuntimeClasspath) {
-      include('slf4j-log4j12*')
+      include('slf4j-reload4j*jar')
       include('reload4j*jar')
     }
     from (configurations.runtimeClasspath) {
