HOTFIX: exclude .github/CODEOWNERS from Apache Rat check

--- a/build.gradle
+++ b/build.gradle
@@ -218,6 +218,7 @@ if (file('.git').exists()) {
     excludes.addAll([
         '**/.git/**',
         '**/build/**',
+        '.github/CODEOWNERS',
         'CONTRIBUTING.md',
         'PULL_REQUEST_TEMPLATE.md',
         'gradlew',
